--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,221 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body,
+html, #root {
+    font-family: 'Roboto Condensed', sans-serif;
+    /* font-family: 'Bungee Spice', cursive; */
+    background: no-repeat url(./assets/zombie_running.jpg);
+    background-size: cover;
+    --textColor: white;
+    --textColor2: black;
+    overflow: auto;
+    height: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* NAVBAR */
+nav {
+    margin-top: 2rem;
+    padding: 2rem;
+    background-color: #000000;
+    position: sticky;
+    position: 0;
+    top: 0;
+    font-size: 1rem;
+    font-family: 'Bungee Spice', cursive;
+}
+
+nav>ul {
+    display: flex;
+    justify-content: space-around;
+    list-style: none;
+}
+
+li>a {
+
+    color: #38383a;
+}
+
+li>a:hover {
+    background-color: yellow;
+}
+
+
+/* HOME */
+.home-page {
+    /* height: 100%; */
+    display: flex;
+    flex-direction: column;
+}
+
+.home-page>h1 {
+    /* width: fit-content; */
+    font-family: 'Bungee Spice', cursive;
+    font-size: 2.5rem;
+    margin-top: 4rem;
+    align-self: end;
+    margin-right: 3rem;
+    border-radius: 4px;
+    color: var(--textColor);
+
+}
+
+.home-page>h2 {
+    /* color: var(--textColor); */
+    /* background-color: var(--textBackColor); */
+    font-size: 1.5rem;
+    width: 50%;
+    margin-top: 2rem;
+    margin-right: 3rem;
+    align-self: flex-end;
+    text-align: end;
+
+}
+
+.call-to-action {
+    color: white;
+    font-size: 1.4rem;
+    /* background-color: black; */
+    padding: 12px;
+    border: white solid 4px;
+    border-radius: 8px;
+    margin-top: 48px;
+    margin-right: 3rem;
+    align-self: flex-end;
+    justify-self: center;
+    text-align: end;
+    text-decoration-line: none;
+}
+
+.call-to-action:hover {
+    background-color: rgb(34, 33, 33);
+    box-shadow: 4px 4px 12px 4px white;
+}
+
+.home-page>p {
+    position: fixed;
+    color: var(--textColor);
+    font-size: 1.3rem;
+    margin-left: 40%;
+    margin-right: 3rem;
+    bottom: 5rem;
+    padding: 2rem;
+    border-radius: 8px;
+    justify-self: end;
+}
+
+
+/* PRODUCTS LIST */
+.products-container {
+    display: flex;
+    padding: 1rem;
+    flex-wrap: wrap;
+    gap: 1rem;
+    overflow-y: scroll;
+}
+
+.products-container>a>.card>* {
+    text-decoration: none;
+    color: uset;
+}
+
+.card {
+    background-color: rgba(192, 199, 99, 0.384);
+    border-radius: 1rem;
+    border: 4px black solid;
+    padding: 1rem;
+
+    display: flex;
+    overflow: hidden;
+}
+
+.card:hover {
+    border: solid 4px white;
+    color: rgb(0, 0, 0);
+    font-weight: bolder;
+}
+
+.card-content {
+    /* padding: 16px 24px 24px 16px; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 12px;
+    font-size: 20px;
+}
+
+
+.amount-price {
+    display: flex;
+    justify-content: space-between;
+    
+}
+
+.card-content>.title {
+    text-align: center;
+    font-size: 1.5rem;
+}
+
+/* PRODUCT */
+.products {
+    padding: 2rem;
+    background-color: #fdf9be;
+    font-size: 1.5rem;
+}
+
+.product>.title {
+    font-size: 2rem;
+    margin: 1rem;
+}
+
+.product>.product-content {
+    display: flex;
+    gap: 2rem;
+}
+
+.product-content>.product-text{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.products-total {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 1rem;
+    
+    padding: 2rem;
+}
+
+.addButton {
+    padding: 1rem;
+    border-radius: 4px;
+    background-color: black;
+    color: orangered;
+    font-size: 1.5rem;
+    font-weight: bolder;
+    cursor: pointer;
+}
+
+.addButton:hover {
+    background-color: rgb(34, 33, 33);
+    box-shadow: 4px -4px 12px -4px orangered;
+}
+
+/* ABOUT */
+.about{
+    padding: 4rem;
+    background-color: #fdf9be;
+
+}
+.about > p {
+    font-size: 1.5rem;
+    /* color: white; */
+    font-weight: bolder;
+    padding: 1rem;
+
+}
+
+.email-to{
+    font-size: 3rem;
+    background-color: #fdf9be;
+
 }
