--- a/src/index.css
+++ b/src/index.css
@@ -230,11 +230,19 @@ li>a:hover {
     padding: 1rem;
 }
 
+.minus-button, .plus-button {
+    background-color: rgba(0, 0,0,0);
+    border: none;
+    font-size: 2rem;
+    display: flex;
+}
+
 .input-amount {
     width: 2rem;
     height: 2rem;
     margin: 1rem;
     text-align: center;
+    font-size: 1.5rem;
 }
 
 .amount-price {
